--- a/_posts/2019-06-09-travis-ci.md
+++ b/_posts/2019-06-09-travis-ci.md
@@ -25,7 +25,7 @@ published: true
 
 
 
-- We also need to register our github project in travis-ci. To do that,** 
+- **We also need to register our github project in travis-ci. To do that,** 
   
   - goto https://travis-ci.org/account/repositories
   
